:refactor 파일 이름 변경 및 @SpringBootTest -> @ExtendWith(MockitoExtension.class)으로 변경